@@ -28,7 +28,6 @@ entity.giga_chicken.name=Giga Chicken
 entity.mega_chicken.name=Mega Chicken
 entity.napalm_creeper.name=Napalm Creeper
 entity.pumpkow.name=Pumpkow
-item.skrim_brewing_stand_item.name=Skrim Brewing Stand
 item.acacia_leaf_armor.name=Acacia Chestplate
 item.acacia_leaf_boots.name=Acacia Boots
 item.acacia_leaf_helmet.name=Acacia Helmet
@@ -125,11 +124,13 @@ item.powersuit_boots.name=Space Jump Boots
 item.powersuit_chestplate.name=Powersuit Chestplate
 item.pumpkin_stone.name=Pumpkin Stone
 item.pure_nail.name=Pure Nail
+item.raffle_ticket.name=Raffle Ticket
 item.raising_canes_fry_sword.name=Raising Cane's® Sword of Frying
 item.rocket_launcher.name=Rocket Launcher
 item.samurai.desc=Nujabes
 item.samurai.name=1st. Samurai
 item.sheep_finder_3000.name=Sheep Finder 3000
+item.skrim_brewing_stand_item.name=Skrim Brewing Stand
 item.skrim_cake.name=Skrim Cake
 item.spruce_leaf_armor.name=Spruce Chestplate
 item.spruce_leaf_boots.name=Spruce Boots
