@@ -5,6 +5,7 @@
 * Added a level 50 perk for brewing.
 * Fixed logic for getting multiple drops from double plants.
 * Fixed logic for flower splosion for double plants.
+* Buffed artifact drop chance and added raffle tickets.
 
 # 1.12.2-1.2
 * You can no longer apply books to artifacts.
